# RChoreoApp

./: .gitattributes  .gitignore  AGENTS.md  AppIcon.md  BorrowSaveActivation.md  Cargo.toml  ModelViewBehavior.md  OpenTelemetry.md  README.md  Slint.md  SystematicDebugging.md  UnitTesting.md  egui.md
apps/android/: Cargo.toml
apps/android/src/: lib.rs
apps/android_egui/: Cargo.toml
apps/android_egui/src/: lib.rs
apps/desktop/: Cargo.toml
apps/desktop/src/: app_icon.rs  main.rs
apps/desktop/src/observability/: mod.rs  otel.rs  trace_context.rs
apps/desktop_egui/: Cargo.toml
apps/desktop_egui/src/: app_icon.rs  main.rs
apps/wasm/: Cargo.toml  index.html
apps/wasm/src/: lib.rs
apps/wasm_egui/: Cargo.toml  index.html
apps/wasm_egui/src/: lib.rs
crates/choreo_components/: Cargo.toml  build.rs
crates/choreo_components/assets/: default.choreo
crates/choreo_components/src/: app_shell.rs  audio_player.rs  behavior.rs  choreography_settings.rs  dancers.rs  date.rs  floor.rs  global.rs  i18n.rs  lib.rs  logging.rs  main_behaviors.rs  main_view_model.rs  preferences.rs  scenes.rs  settings.rs
crates/choreo_components/src/app_shell/: actions.rs  effects.rs  mod.rs  reducer.rs  runtime.rs  state.rs  ui.rs
crates/choreo_components/src/audio_player/: AudioPlayer.md  actions.rs  audio_player_actor.rs  audio_player_backend.rs  audio_player_behavior.rs  audio_player_info.slint  audio_player_link_scene_behavior.rs  audio_player_linking.rs  audio_player_position_changed_behavior.rs  audio_player_ticks_behavior.rs  audio_player_view.slint  audio_player_view_model.rs  awedio_audio_player_actor.rs  browser_audio_player_actor.rs  close_audio_file_behavior.rs  haptics.rs  messages.rs  mod.rs  open_audio_file_behavior.rs  pipeline.rs  rodio_audio_player_actor.rs  runtime.rs  silent_audio_player_actor.rs  slider_with_ticks.slint  style_behavior.rs  translate_behavior.rs  types.rs  ui.rs
crates/choreo_components/src/behavior/: mod.rs  types.rs
crates/choreo_components/src/choreo_info/: messages.rs  state.rs  ui.rs
crates/choreo_components/src/choreo_main/: apply_interaction_mode_behavior.rs  behavior_pipeline.rs  behaviors.rs  hide_dialog_behavior.rs  main_page_binding.rs  main_view_model.rs  main_view_model_provider.rs  messages.rs  mod.rs  open_audio_behavior.rs  open_choreo_file_behavior.rs  open_image_behavior.rs  open_svg_file_behavior.rs  reducer.rs  runtime.rs  show_dialog_behavior.rs  state.rs  style_behavior.rs  translate_behavior.rs  ui.rs
crates/choreo_components/src/choreography_settings/: actions.rs  behaviors.rs  choreography_settings.slint  choreography_settings_choreography_card.slint  choreography_settings_display_card.slint  choreography_settings_floor_card.slint  choreography_settings_scene_card.slint  mapper.rs  messages.rs  (+34 more)
crates/choreo_components/tests/: app_shell_tests.rs  audio_player_tests.rs  choreo_info_tests.rs  choreo_main_binding_api_spec.rs  choreo_main_tests.rs  choreography_settings_contract_spec.rs  choreography_settings_tests.rs  color_picker_tests.rs  dancers_tests.rs  dialog_host_tests.rs  floor_tests.rs  gesture_handling_behavior_spec.rs  i18n_slint_parity_spec.rs  main_page_tests.rs  main_root_view_exports_spec.rs  main_ui_exports_spec.rs  material_style_metrics_slint_parity_spec.rs  material_typography_structure_spec.rs  move_positions_behavior_spec.rs  move_positions_feature_spec.rs  observability_tests.rs  place_position_behavior_spec.rs  redraw_floor_behavior_spec.rs  rotate_around_center_behavior_spec.rs  scale_around_dancer_behavior_spec.rs  scale_positions_behavior_spec.rs  scenes_tests.rs  settings_tests.rs  shell_host_tests.rs  slider_with_ticks_tests.rs  slint_text_rendering_tests.rs  test_pointer_event_args_spec.rs  time_tests.rs  timestamp_state_machine_tests.rs  ui_icons_catalog_spec.rs  ui_style_tokens_spec.rs  ui_style_typography_parity_spec.rs
crates/choreo_components/ui/: audio_player_view.slint  choreo_info.slint  choreography_settings_choreography_card.slint  choreography_settings_display_card.slint  choreography_settings_floor_card.slint  choreography_settings_scene_card.slint  choreography_settings_view.slint  color_picker.slint  copy_scene_positions_dialog.slint  dancer_list_item_view.slint  dancer_settings_page.slint  dancers_pane_view.slint  delete_scene_dialog.slint  dialog_host.slint  drawer_host.slint  floor_canvas_view.slint  hamburger_toggle_button.slint  main.slint  main_page.slint  main_page_drawer_host.slint  number_picker.slint  scene_item_view.slint  scene_search_bar.slint  scenes_pane_view.slint  settings_page.slint  shell_host.slint  slider_with_ticks.slint  splash_screen.slint  swap_dancers_dialog.slint  translations.slint  zoom_pan_info.slint
crates/choreo_components_egui/: Cargo.toml
crates/choreo_components_egui/src/: app_shell.rs  i18n.rs  lib.rs
crates/choreo_components_egui/tests/: audio_player_tests.rs  behavior_tests.rs  choreo_main_binding_api_spec.rs  choreo_main_tests.rs  choreography_settings_contract_spec.rs  choreography_settings_tests.rs  dancers_tests.rs  dialog_host_tests.rs  drawer_host_tests.rs  floor_tests.rs  global_tests.rs  hamburger_toggle_button_tests.rs  haptics_tests.rs  i18n_slint_parity_spec.rs  main_page_drawer_host_tests.rs  main_root_view_exports_spec.rs  main_ui_exports_spec.rs  material_style_metrics_slint_parity_spec.rs  material_typography_structure_spec.rs  nav_bar_tests.rs  number_picker_tests.rs  scenes_tests.rs  slider_with_ticks_tests.rs  splash_screen_tests.rs  ui_icons_catalog_spec.rs  ui_style_tests.rs  ui_style_tokens_spec.rs  ui_style_typography_parity_spec.rs
crates/choreo_master_mobile_json/: Cargo.toml  README.md
crates/choreo_master_mobile_json/src/: clock.rs  errors.rs  lib.rs
crates/choreo_master_mobile_json/tests/: import_export.rs
crates/choreo_material3/: Cargo.toml
crates/choreo_material3/src/: lib.rs
crates/choreo_models/: Cargo.toml
crates/choreo_models/src/: clone_mode.rs  colors.rs  lib.rs  mapping.rs  preferences.rs
crates/choreo_models/tests/: choreography_model_mapper_tests.rs  colors_web_names_spec.rs
(+1040 files in other folders)
