[workspace]
members = [
    "crates/shared",
    "crates/choreo_master_mobile_json",
    "crates/choreo_state_machine",
    "crates/choreo_algorithms",
    "crates/choreo_i18n",
    "apps/desktop",
    "apps/android",
    "apps/wasm",
]
default-members = [
    "apps/desktop",
    "crates/shared",
]
resolver = "2"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
