[workspace]
members = [
    "crates/choreo_master_mobile_json",
    "crates/choreo_state_machine",
    "crates/choreo_algorithms",
    "crates/choreo_models",
    "crates/choreo_components",
    "crates/choreo_components_egui",
    "crates/choreo_i18n",
    "apps/desktop",
    "apps/desktop_egui",
    "apps/android",
    "apps/android_egui",
    "apps/wasm",
    "apps/wasm_egui",
]
default-members = [
    "apps/desktop",
    "apps/desktop_egui",
]
resolver = "2"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[profile.dev.package.rodio]
opt-level = 3

[profile.dev.package.awedio]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3
