[package]
name = "rchoreo_android"
version = "0.1.0"
edition = "2024"

[package.metadata.android]
package = "app.rchoreo.egui"
resources = "res"
build_targets = [
    "aarch64-linux-android",
    "x86_64-linux-android",
]

[package.metadata.android.sdk]
target_sdk_version = 36
min_sdk_version = 28

[[package.metadata.android.uses_permission]]
name = "android.permission.VIBRATE"

[package.metadata.android.application]
label = "ChoreoApp"
icon = "@mipmap/ic_launcher"

[package.metadata.android.application.activity]
launch_mode = "singleTask"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.32.3"
egui-material3 = "0.0.7"
choreo_components = { path = "../../crates/choreo_components" }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.32.3", default-features = false, features = ["android-native-activity", "default_fonts", "glow"] }
winit = { version = "0.30.12", default-features = false, features = ["android-native-activity", "rwh_06"] }
