[package]
name = "rchoreo_android_egui"
version = "0.1.0"
edition = "2024"

[package.metadata.android]
package = "app.rchoreo.egui"
resources = "res"
build_targets = [
    "aarch64-linux-android",
]

[package.metadata.android.application]
label = "ChoreoApp"
icon = "@mipmap/ic_launcher"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.32.3"
egui-material3 = "0.0.7"
choreo_components_egui = { path = "../../crates/choreo_components_egui" }

[target.'cfg(target_os = "android")'.dependencies]
eframe = "0.32.3"
winit = "0.30.12"
