[package]
name = "rchoreo_desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.14.1"
crossbeam-channel = "0.5"
rfd = "0.14"
choreo_algorithms = { path = "../../crates/choreo_algorithms", package = "choreo_algorithms" }
choreo_i18n = { path = "../../crates/choreo_i18n", package = "choreo_i18n" }
choreo_master_mobile_json = { path = "../../crates/choreo_master_mobile_json", package = "choreo_master_mobile_json" }
choreo_models = { path="../../crates/choreo_models", package = "choreo_models" }
choreo_state_machine = { path="../../crates/choreo_state_machine", package = "choreo_state_machine" }
choreo_components = { path="../../crates/choreo_components", package = "choreo_components" }
