[package]
name = "rchoreo_wasm_egui"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
egui = "0.32.3"
egui-material3 = "0.0.7"
choreo_components_egui = { path = "../../crates/choreo_components_egui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
