[package]
name = "choreo_components"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
otel = [
  "dep:opentelemetry",
]

[dependencies]
choreo_models = { path = "../choreo_models" }
choreo_master_mobile_json = { path = "../choreo_master_mobile_json" }
choreo_i18n = { path = "../choreo_i18n" }
choreo_state_machine = { path = "../choreo_state_machine" }
crossbeam-channel = "0.5.15"
log = "0.4.29"
slint = "1.15.1"
material-color-utilities = "1.0.0-dev.18"
nject = "0.4.5"
time = "0.3.47"
web-time = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opentelemetry = { version = "0.31", optional = true }
dark-light = "2.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"
rodio = "0.22.1"
awedio = "0.6.0"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlAudioElement", "HtmlMediaElement", "Performance", "Storage", "Window"] }
web-audio-api = "1.2.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.1"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
rspec = "1.0.0"
i-slint-backend-testing = "1.15.1"
serial_test = "3.4.0"
