[package]
name = "choreo_components"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
otel = [
  "dep:opentelemetry",
]

[dependencies]
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["svg"] }
egui-material3 = "0.0.7"
choreo_models = { path = "../choreo_models" }
choreo_master_mobile_json = { path = "../choreo_master_mobile_json" }
choreo_i18n = { path = "../choreo_i18n" }
choreo_state_machine = { path = "../choreo_state_machine" }
log = "0.4.29"
lyon_extra = "1.0.3"
lyon_path = "1.0.16"
lyon_tessellation = "1.0.16"
material-color-utilities = "1.0.0-dev.18"
nject = "0.4.5"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
opentelemetry = { version = "0.31", optional = true }
dark-light = "2.0.0"
crossbeam-channel = "0.5.15"
rodio = "0.22.1"
symphonia = { version = "0.5.5", default-features = false, features = ["mp3", "wav"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
awedio = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.1"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[dev-dependencies]
rspec = "1.0.0"
serial_test = "3.4.0"
