[package]
name = "choreo_components_egui"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
otel = [
  "dep:opentelemetry",
]

[dependencies]
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["svg"] }
egui-material3 = "0.0.7"
choreo_models = { path = "../choreo_models" }
choreo_master_mobile_json = { path = "../choreo_master_mobile_json" }
choreo_i18n = { path = "../choreo_i18n" }
choreo_state_machine = { path = "../choreo_state_machine" }
log = "0.4.29"
material-color-utilities = "1.0.0-dev.18"
nject = "0.4.5"
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
opentelemetry = { version = "0.31", optional = true }
dark-light = "2.0.0"
crossbeam-channel = "0.5.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[dev-dependencies]
rspec = "1.0.0"
serial_test = "3.4.0"
