[package]
name = "choreo_models"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
choreo_master_mobile_json = { path = "../choreo_master_mobile_json" }
crossbeam-channel = "0.5"
time = { version = "0.3.46", features = ["formatting", "parsing"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
